  Due to these changes, the target frame rate is now a separate setting. If defined, it will lead VPX to perform its own synchronization, trying to achieve the requested frame rate.
  The synchronization settings still apply. Therefore, selecting a frame rate that is higher than the monitor refresh rate requires the use of the 'None' synchronization mode!

FIXES:

- timers with a -1 interval are always fired after physics and animation, but before rendering, allowing the script to update visual parts accordingly without any visual lag.
  This also applies to the new 'Animate' event which is designed for this purpose.

- fix visible depth range evaluation, allowing to simplify VR settings and to edit large VR rooms within the LiveUI.
  Note that loading pre-10.8 tables will take a bit longer (until they are saved again with 10.8) due to this, as these need to compute 3D-bounds for each part.

- fix analogue nudge not working for joysticks/gamepads in XInput mode

- fix some problems with playing sounds via BASS: pitch/frequency change and loop/restart should now be matching the 'old' player

- reflections now work in the interactive camera/light editing mode (F6) as well

- fix overbrightness in F6 (interactive camera/light editing) mode

- fix swapped red & blue channels when exporting from BMPs

- handle broken tables better and try to load as much as possible

- static element preprocessing is now done on the GPU (which leads to a faster VPX-player start)
- increase preprocessing sample rate for the static parts of the table

- cleanup Light Debugger dialog and fix 2nd color button

- improve script editing performance again

- improve mouse cursor hide/unhide in (windowed) fullscreen

- fix 'O'-key ball debugging

- fix crash if sound card(s) hardware/driver setup changed

- fix crash on tables with weird table info

- fix potential multi-threading screw-up when loading textures

- improve UI scaling on high resolutions (e.g. 4K)
